# lcd-data-logger

./: CMakeLists.txt  sdkconfig  sdkconfig.old
Docs/: Architecture.md  Components.md  Data-Visualization.md  Implementation-Complete.md  Implementation-Plan.md  README.md  Testing-Strategy.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/DataLogger/: adc_manager.c  adc_manager.h  config.c  config.h  data_logger.c  data_logger.h  display_manager.c  display_manager.h  hal.c  hal.h  network_manager.c  network_manager.h  storage_manager.c  storage_manager.h  test_suite.c  test_suite.h  uart_manager.c  uart_manager.h
main/DataViewer/: config_examples.py  demo_buttons.py  pyviewer.py  quick_config.py  test_config_api.py  test_matplotlib.py  test_server.py
main/LCD_Driver/: ST7789.c
main/LVGL_UI/: LVGL_Example.c  LVGL_Example.h
main/Wireless/: Wireless.c  Wireless.h
test/: CMakeLists.txt  test_config.c  test_data_logger.c  test_hal.c  test_main.c  test_managers.c
