idf_component_register(
                         SRCS "main.c"
                              "LCD_Driver/Vernon_ST7789T/Vernon_ST7789T.c"
                              "LCD_Driver/ST7789.c"
                              "LVGL_Driver/LVGL_Driver.c"
                              "LVGL_UI/LVGL_Example.c"
                              "SD_Card/SD_SPI.c"
                              "RGB/RGB.c"
                              "Wireless/Wireless.c"
                              "DataLogger/config.c"
                              "DataLogger/hal.c"
                              "DataLogger/uart_manager.c"
                              "DataLogger/adc_manager.c"
                              "DataLogger/storage_manager.c"
                              "DataLogger/network_manager.c"
                              "DataLogger/display_manager.c"
                              "DataLogger/data_logger.c"
                              "DataLogger/test_suite.c"

                         INCLUDE_DIRS
                              "./LCD_Driver/Vernon_ST7789T"
                              "./LCD_Driver"
                              "./LVGL_Driver"
                              "./LVGL_UI"
                              "./SD_Card"
                              "./RGB"
                              "./Wireless"
                              "./DataLogger"
                              "."

                         REQUIRES
                              esp_http_server
                              esp_ringbuf
                              esp_driver_gpio
                              esp_driver_spi
                              esp_driver_uart
                              esp_driver_i2c
                              esp_driver_ledc
                              esp_adc
                              fatfs
                              sdmmc
                              esp_timer
                              nvs_flash
                              esp_wifi
                              esp_netif
                              esp_event
                              json
                              driver
                              spi_flash
                              esp_lcd
                              bt
                       )
